# 2decomp-fft

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS  Contribute.md  HOWTO.md  INSTALL.md  LICENSE  Makefile  Makefile-CaNS.compilers  Makefile.am  Makefile.compilers  NEWS.md  README.md  alloc.f90  decomp_2d.f90  factor.f90  fft_common.f90  fft_fftw3.f90  fft_generic.f90  halo.f90  halo_comm_x.f90  halo_comm_y.f90  halo_comm_z.f90  halo_common.f90  io.f90  io_read_inflow.f90  transpose_x_to_y.f90  transpose_y_to_x.f90  transpose_y_to_z.f90  transpose_z_to_y.f90
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Build.yml  Build_Runner.yml  Build_all.yml  RunnerFastCI.yml  RunnerFastCI_double.yml  RunnerFastCI_single.yml  RunnerFullCI.yml  RunnerFullCI_GNU.yml  RunnerFullCI_GNU_double.yml  RunnerFullCI_GNU_single.yml  RunnerFullCI_INTEL.yml  RunnerFullCI_INTEL_double.yml  RunnerFullCI_INTEL_single.yml  RunnerFullCI_NVHPC.yml  RunnerFullCI_NVHPC_double.yml  RunnerFullCI_NVHPC_single.yml  draft-pdf.yml
cmake/: 2decomp-config.cmake.in  D2D_Compilers.cmake  D2D_GPU.cmake  D2D_MPI.cmake  D2D_Profilers.cmake  compilers.cmake  decomp2d-build_config.cmake.in  decomp2d-config-version.cmake.in  decomp2d-config.cmake.in  fft.cmake  gpu.cmake  mpi.cmake
cmake/compilers/: D2D_flags_cray.cmake  D2D_flags_flang.cmake  D2D_flags_fujitsu.cmake  D2D_flags_gnu.cmake  D2D_flags_intel.cmake  D2D_flags_nag.cmake  D2D_flags_nvidia.cmake
cmake/fft/: downloadFindFFTW.cmake.in  fft.cmake
examples/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  utilities.f90
examples/cmake/: D2D_CREATE_TEST.cmake  D2D_Set_Decomposition.cmake  D2D_Set_Resolution.cmake
examples/dtt/: CMakeLists.txt  fftw_f03_dtt_x.f90  fftw_f03_dtt_z.f90
examples/fft_multigrid/: CMakeLists.txt  README.md  fft_multigrid.f90  fft_multigrid_inplace.f90  fft_multigrid_no_obj.f90  fft_multigrid_utilities.f90
examples/fft_multiple_grids/: CMakeLists.txt  README.md  fft_multiple_grids.f90  fft_multiple_grids_inplace.f90  fft_multiple_grids_no_obj.f90  fft_multiple_grids_reference.f90  fft_multiple_grids_utilities.f90
examples/fft_physical_x/: .gitignore  CMakeLists.txt  Makefile  README  README.md  fft_c2c_x.f90  fft_c2c_x_skip.f90  fft_grid_x.f90  fft_physical_x  fft_physical_x.f90  fft_r2c_x.f90  fft_r2c_x_skip.f90  fft_r2c_x_skip_errorMsg.f90
examples/fft_physical_z/: .gitignore  CMakeLists.txt  Makefile  README  README.md  fft_c2c_z.f90  fft_c2c_z_skip.f90  fft_physical_z.f90  fft_r2c_z.f90  fft_r2c_z_skip.f90  fft_r2c_z_skip_errorMsg.f90
examples/fft_test_c2c/: Makefile  fft_test_c2c  fft_test_c2c.f90
examples/fft_test_r2c/: Makefile  fft_test_r2c  fft_test_r2c.f90
examples/grad3d/: CMakeLists.txt  README.md  adios2_config.xml  grad3d.f90
examples/halo_test/: CMakeLists.txt  Makefile  README.md  bind.sh  exchange_test.f90  halo_test.f90
examples/init_test/: .gitignore  CMakeLists.txt  Makefile  README.md  init_obj_test.f90  init_test.f90  utilities.f90
examples/io_adios/: .gitignore  CMakeLists.txt  adios2_config.xml  io_bench.f90  io_mpi_non_blocking.f90  io_plane_test.f90  io_read.f90  io_test.f90  io_tmp_test.f90  io_var_test.f90  io_visu.f90
examples/io_mpi/: CMakeLists.txt  README.md  io_bench.f90  io_mpi_non_blocking.f90  io_plane_test.f90  io_read.f90  io_test.f90  io_var_test.f90  io_visu.f90
examples/io_test/: .gitignore  CMakeLists.txt  Makefile  README.md  adios2_config.xml  io_bench.f90  io_mpi_non_blocking.f90  io_plane_test.f90  io_read.f90  io_test.f90  io_tmp_test.f90  io_var_test.f90  io_visu.f90  visu.f90
examples/non_blocking/: Makefile
examples/test2d/: CMakeLists.txt  Makefile  README  README.md  decomp_pool.f90  test2d.f90  timing2d_complex.f90  timing2d_real.f90
examples/timing/: Makefile  timing  timing.f90
scripts/: .fprettifyrc  format.sh  gen_adios_read_plane.py  gen_adios_read_var.py  gen_adios_write_plane.py  gen_adios_write_var.py  gen_io_read_one.py  gen_io_read_plane.py  gen_io_read_scalar.py  gen_io_read_var.py  gen_io_write_one.py  gen_io_write_plane.py  gen_io_write_scalar.py  gen_io_write_var.py
src/: CMakeLists.txt  alloc.f90  alloc_dev.f90  block.f90  block_fftw3_f03.f90  block_gpu.f90  d2d_log.f90  decomp_2d.f90  decomp_2d_constants.f90  decomp_2d_cumpi.f90  decomp_2d_init_fin.f90  decomp_2d_mpi.f90  decomp_2d_nccl.f90  decomp_pool.f90  factor.f90  fft_common.f90  fft_common_3d.f90  fft_cufft.f90  fft_fftw3.f90  fft_fftw3_f03.f90  fft_generic.f90  fft_log.f90  fft_mkl.f90  glassman.f90  halo.f90  halo_comm_x.f90  halo_comm_y.f90  halo_comm_z.f90  halo_common.f90  halo_exchange_x_body.f90  halo_exchange_y_body.f90  halo_exchange_z_body.f90  info.f90  interp.f90  io.f90  io_adios.f90  io_adios_none.f90  io_family.f90  io_mpi.f90  io_object.f90  (+22 more)
submissionjoss/: paper.bib  paper.md
