file(GLOB files_fft_c2c fft_c2c_x.f90)
file(GLOB files_fft_r2c fft_r2c_x.f90)
file(GLOB files_fft_grid fft_grid_x.f90)

include_directories(${CMAKE_SOURCE_DIR}/src)

add_executable(fft_c2c_x ${files_fft_c2c})
add_executable(fft_r2c_x ${files_fft_r2c})
add_executable(fft_grid_x ${files_fft_grid})

target_link_libraries(fft_c2c_x PRIVATE decomp2d)
target_link_libraries(fft_r2c_x PRIVATE decomp2d)
target_link_libraries(fft_grid_x PRIVATE decomp2d)
if (FFTW_FOUND)
  target_link_libraries(fft_c2c_x PRIVATE ${FFTW_DOUBLE_LIB})
  target_link_libraries(fft_c2c_x PRIVATE ${FFTW_FLOAT_LIB})
  target_link_libraries(fft_r2c_x PRIVATE ${FFTW_DOUBLE_LIB})
  target_link_libraries(fft_r2c_x PRIVATE ${FFTW_FLOAT_LIB})
  target_link_libraries(fft_grid_x PRIVATE ${FFTW_DOUBLE_LIB})
  target_link_libraries(fft_grid_x PRIVATE ${FFTW_FLOAT_LIB})
elseif (MKL_FOUND)
  target_link_libraries(fft_c2c_x PUBLIC $<LINK_ONLY:MKL::MKL>)
  target_link_libraries(fft_r2c_x PUBLIC $<LINK_ONLY:MKL::MKL>)
  target_link_libraries(fft_grid_x PUBLIC $<LINK_ONLY:MKL::MKL>)
endif (FFTW_FOUND)

if (BUILD_TARGET MATCHES "gpu")
  set(example_dir "${PROJECT_BINARY_DIR}/examples/fft_physical_x")
  message(STATUS "Example dir ${example_dir}")
  install(FILES bind.sh DESTINATION ${example_dir})
  file(COPY bind.sh DESTINATION ${example_dir})
  add_test(NAME fft_c2c_x COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:fft_c2c_x>)
  add_test(NAME fft_r2c_x COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:fft_r2c_x>)
  add_test(NAME fft_grid_x COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh  $<TARGET_FILE:fft_grid_x>)
else ()  
  add_test(NAME fft_c2c_x COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:fft_c2c_x>)
  add_test(NAME fft_r2c_x COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:fft_r2c_x>)
  add_test(NAME fft_grid_x COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:fft_grid_x>)
endif()
