file(GLOB files_fft_c2c fft_c2c_z.f90)
file(GLOB files_fft_r2c fft_r2c_z.f90)
if (FFT_Choice MATCHES "fftw_f03")
  file(GLOB files_fft_c2c_skip fft_c2c_z_skip.f90)
  file(GLOB files_fft_r2c_skip fft_r2c_z_skip.f90)
  file(GLOB files_fft_r2c_skip_warn fft_r2c_z_skip_errorMsg.f90)
endif()

include_directories(${CMAKE_SOURCE_DIR}/src)

add_executable(fft_c2c_z ${files_fft_c2c})
add_executable(fft_r2c_z ${files_fft_r2c})
if (FFT_Choice MATCHES "fftw_f03")
  add_executable(fft_c2c_z_skip ${files_fft_c2c_skip})
  add_executable(fft_r2c_z_skip ${files_fft_r2c_skip})
  add_executable(fft_r2c_z_skip_warn ${files_fft_r2c_skip_warn})
endif()

target_link_libraries(fft_c2c_z PRIVATE decomp2d examples_utils)
target_link_libraries(fft_r2c_z PRIVATE decomp2d examples_utils)
if (FFT_Choice MATCHES "fftw_f03")
  target_link_libraries(fft_c2c_z_skip PRIVATE decomp2d examples_utils)
  target_link_libraries(fft_r2c_z_skip PRIVATE decomp2d examples_utils)
  target_link_libraries(fft_r2c_z_skip_warn PRIVATE decomp2d examples_utils)
endif()

# Run the test(s)
set(run_dir "${test_dir}/fft_c2c_z")
message(STATUS "Example dir ${run_dir}")
file(MAKE_DIRECTORY ${run_dir})
if (BUILD_TARGET MATCHES "gpu")
  file(COPY bind.sh DESTINATION ${run_dir})
  add_test(NAME fft_c2c_z COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:fft_c2c_z> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
else ()  
  add_test(NAME fft_c2c_z COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:fft_c2c_z> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
endif ()
#
set(run_dir "${test_dir}/fft_r2c_z")
message(STATUS "Example dir ${run_dir}")
file(MAKE_DIRECTORY ${run_dir})
if (BUILD_TARGET MATCHES "gpu")
  file(COPY bind.sh DESTINATION ${run_dir})
  add_test(NAME fft_r2c_z COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:fft_r2c_z> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
else ()  
  add_test(NAME fft_r2c_z COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:fft_r2c_z> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
endif ()

if (FFT_Choice MATCHES "fftw_f03")
  set(run_dir "${test_dir}/fft_c2c_z_skip")
  message(STATUS "Example dir ${run_dir}")
  file(MAKE_DIRECTORY ${run_dir})
  if (BUILD_TARGET MATCHES "gpu")
    file(COPY bind.sh DESTINATION ${run_dir})
   add_test(NAME fft_c2c_z_skip COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:fft_c2c_z_skip> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
  else ()  
    add_test(NAME fft_c2c_z_skip COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:fft_c2c_z_skip> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
  endif ()
  #
  set(run_dir "${test_dir}/fft_r2c_z_skip")
  message(STATUS "Example dir ${run_dir}")
  file(MAKE_DIRECTORY ${run_dir})
  if (BUILD_TARGET MATCHES "gpu")
    file(COPY bind.sh DESTINATION ${run_dir})
    add_test(NAME fft_r2c_z_skip COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:fft_r2c_z_skip> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
  else ()  
    add_test(NAME fft_r2c_z_skip COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:fft_r2c_z_skip> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
  endif ()
  #
  set(run_dir "${test_dir}/fft_r2c_z_skip_warn")
  message(STATUS "Example dir ${run_dir}")
  file(MAKE_DIRECTORY ${run_dir})
  if (BUILD_TARGET MATCHES "gpu")
    file(COPY bind.sh DESTINATION ${run_dir})
    add_test(NAME fft_r2c_z_skip_warn COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ./bind.sh $<TARGET_FILE:fft_r2c_z_skip_warn> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
  else ()  
    add_test(NAME fft_r2c_z_skip_warn COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:fft_r2c_z_skip_warn> ${TEST_ARGUMENTS} WORKING_DIRECTORY ${run_dir})
  endif ()
endif()
